# ragas-mvp

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
notebooks/: ragas_pipeline.ipynb
src/: config.py  evaluation.py  rag_pipeline.py
